# _m13

./: .gitignore  BUILD_AND_RUN.md  M130_MASTER_PROMPT.md  NEW_vs_PX4_GENERATED_CODE_DIFF.md  m130_mhe_ocp.json  اوامر البناء والتشغيل ل m13
.claude/: ARCHITECT.md  CLAUDE.md  EXECUTOR.md
.github/workflows/: m130-foundation.yml
c_generated_code/: Makefile
c_generated_code/m130_rocket_model/: m130_rocket_expl_ode_fun.c  m130_rocket_expl_vde_adj.c  m130_rocket_expl_vde_forw.c
m13/6DOF_v4_pure/: m130_mhe_ocp.json
m13/6DOF_v4_pure/c_generated_code/: Makefile
m13/6DOF_v4_pure/config/: 6dof_config_advanced.yaml
m13/6DOF_v4_pure/mpc/: .mpc_source_hash  m130_mpc_autopilot.json
qgc/: CLAUDE.md
qgc/custom/: CMakeLists.txt  README.md  custom.qrc
qgc/custom/cmake/: CustomOverrides.cmake
qgc/custom/docs/: README.md
qgc/custom/docs/compliance/: AS9100D-delta.md  DO-178C-objectives-DAL-C.md  DO-278A-objectives.md  ISO9001-checklist.md  MIL-STD-1472H-checklist.md  NIST-800-53-mapping.md
qgc/custom/docs/design/: AccessControl.md  FlightDataRecorder.md  Phase6b-AuthEnhancements.md  Phase6c-AuthTransports.md  PhaseB-QtIntegration.md  Pillar8-TrajectoryCorridor.md  ProtocolCodegen.md  SafetyKernel-Integration.md  SystemArchitecture.md  TuningAnalysis.md  ViewsArchitecture.md
qgc/custom/docs/operations/: PostFlightReport-template.md  PreLaunchChecklist.md
qgc/custom/docs/plans/: ImprovementPlan.md  SCMP.md  SDP.md  SQAP.md  SVP.md
qgc/custom/docs/requirements/: ICD-DebugFloatArray-legacy.md  ICD-MAVLink.md  SRS-M130GCS.md  traceability.csv
qgc/custom/docs/safety/: FMEA.md  HazardLog.md  SafetyEnvelope.md
qgc/custom/mavlink/: m130.xml
qgc/custom/src/: CustomPlugin.cc  CustomPlugin.h  FlyViewCustomLayer.qml  README.md  RocketTelemetryFactGroup.cc  RocketTelemetryFactGroup.h
qgc/custom/src/FirmwarePlugin/: CustomFirmwarePlugin.cc  CustomFirmwarePlugin.h  CustomFirmwarePluginFactory.cc  (+1 more)
qgc/custom/tests/: README.md
qgc/custom/tests/core/: AlertManagerTest.cc  Argon2Test.cc  AuditLoggerTest.cc  AuthenticatorChainTest.cc  Base32Test.cc  BerTest.cc  Blake2bTest.cc  CMakeLists.txt  CertPolicyTest.cc  ChainOfCustodyTest.cc  ChecklistModelTest.cc  CommandAuthorizationTest.cc  CorridorMonitorTest.cc  CountdownClockTest.cc  FdrExporterTest.cc  FdrReaderTest.cc  FftTest.cc  FlightDataRecorderTest.cc  FlightSafetyEnvelopeTest.cc  FlightTerminationServiceTest.cc  GeodesicTest.cc  GssAuthenticatorTest.cc  HmacSha256Test.cc  IipPredictorTest.cc  LdapAuthenticatorTest.cc  LdapDnTest.cc  LdapFilterTest.cc  LdapMessageTest.cc  M130DialectTest.cc  M130GeneratedCodecTest.cc  MapCorridorTest.cc  MessageRouterTest.cc  MheInnovationMonitorTest.cc  MissionStateMachineTest.cc  MpcTuningModelTest.cc  NotamModelTest.cc  Pbkdf2Test.cc  ProtocolVersionTest.cc  ReplayControllerTest.cc  ReplayEngineTest.cc  (+13 more)
qgc/custom/tools/: README.md  generate-dialect.py  post-flight-report-generator.py  post-flight-report.py  validate-dialect.py  validate-traceability.py
qgc/custom/translations/: README.md  m130_ar.ts  m130_en.ts
qgc/src/AutoPilotPlugins/: AutoPilotPlugin.h
qgc/src/Settings/: APMMavlinkStreamRate.SettingsGroup.json  Mavlink.SettingsGroup.json  Video.SettingsGroup.json
qgc/src/Terrain/: TerrainTileManager.cc
qgc/src/Vehicle/: MessageIntervalManager.cc  MessageIntervalManager.h  Vehicle.cc
(+165 files in other folders)
